// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer className is test_drawer 1`] = `
LoadedCheerio {
  "0": <div
    class=""
  >
    <div
      class="dcloud-drawer dcloud-drawer-right test_drawer"
      tabindex="-1"
    >
      <div
        class="dcloud-drawer-mask"
      />
      <div
        class="dcloud-drawer-content-wrapper"
        style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
      >
        <div
          class="dcloud-drawer-content"
        >
          <div
            class="dcloud-drawer-wrapper-body"
            style="opacity:0;transition:opacity .3s"
          >
            <div
              class="dcloud-drawer-header dcloud-drawer-header-close-only"
            >
              <div
                class="dcloud-drawer-header-title"
              >
                <button
                  aria-label="Close"
                  class="dcloud-drawer-close"
                  type="button"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="dcloud-drawer-body"
            >
              Here is content of Drawer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer closable is false 1`] = `
LoadedCheerio {
  "0": <div
    class=""
  >
    <div
      class="dcloud-drawer dcloud-drawer-right"
      tabindex="-1"
    >
      <div
        class="dcloud-drawer-mask"
      />
      <div
        class="dcloud-drawer-content-wrapper"
        style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
      >
        <div
          class="dcloud-drawer-content"
        >
          <div
            class="dcloud-drawer-wrapper-body"
          >
            <div
              class="dcloud-drawer-body"
            >
              Here is content of Drawer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer destroyOnClose is true 1`] = `
LoadedCheerio {
  "0": <div
    class=""
  >
    <div
      class="dcloud-drawer dcloud-drawer-right"
      tabindex="-1"
    >
      <div
        class="dcloud-drawer-mask"
      />
      <div
        class="dcloud-drawer-content-wrapper"
        style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
      >
        <div
          class="dcloud-drawer-content"
        >
          <div
            class="dcloud-drawer-wrapper-body"
            style="opacity:0;transition:opacity .3s"
          >
            <div
              class="dcloud-drawer-header dcloud-drawer-header-close-only"
            >
              <div
                class="dcloud-drawer-header-title"
              >
                <button
                  aria-label="Close"
                  class="dcloud-drawer-close"
                  type="button"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="dcloud-drawer-body"
            >
              Here is content of Drawer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer getContainer return undefined 1`] = `
LoadedCheerio {
  "0": <div />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer getContainer return undefined 2`] = `
LoadedCheerio {
  "0": <div>
    <div
      class=""
    >
      <div
        class="dcloud-drawer dcloud-drawer-right dcloud-drawer-open"
        tabindex="-1"
      >
        <div
          class="dcloud-drawer-mask"
        />
        <div
          class="dcloud-drawer-content-wrapper"
          style="width: 400px;"
        >
          <div
            class="dcloud-drawer-content"
          >
            <div
              class="dcloud-drawer-wrapper-body"
            >
              <div
                class="dcloud-drawer-header dcloud-drawer-header-close-only"
              >
                <div
                  class="dcloud-drawer-header-title"
                >
                  <button
                    aria-label="Close"
                    class="dcloud-drawer-close"
                    type="button"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="dcloud-drawer-body"
              >
                Here is content of Drawer
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer have a footer 1`] = `
LoadedCheerio {
  "0": <div
    class=""
  >
    <div
      class="dcloud-drawer dcloud-drawer-right"
      tabindex="-1"
    >
      <div
        class="dcloud-drawer-mask"
      />
      <div
        class="dcloud-drawer-content-wrapper"
        style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
      >
        <div
          class="dcloud-drawer-content"
        >
          <div
            class="dcloud-drawer-wrapper-body"
          >
            <div
              class="dcloud-drawer-header dcloud-drawer-header-close-only"
            >
              <div
                class="dcloud-drawer-header-title"
              >
                <button
                  aria-label="Close"
                  class="dcloud-drawer-close"
                  type="button"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="dcloud-drawer-body"
            >
              Here is content of Drawer
            </div>
            <div
              class="dcloud-drawer-footer"
            >
              Test Footer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer have a title 1`] = `
LoadedCheerio {
  "0": <div
    class=""
  >
    <div
      class="dcloud-drawer dcloud-drawer-right"
      tabindex="-1"
    >
      <div
        class="dcloud-drawer-mask"
      />
      <div
        class="dcloud-drawer-content-wrapper"
        style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
      >
        <div
          class="dcloud-drawer-content"
        >
          <div
            class="dcloud-drawer-wrapper-body"
          >
            <div
              class="dcloud-drawer-header"
            >
              <div
                class="dcloud-drawer-header-title"
              >
                <button
                  aria-label="Close"
                  class="dcloud-drawer-close"
                  type="button"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  class="dcloud-drawer-title"
                >
                  Test Title
                </div>
              </div>
            </div>
            <div
              class="dcloud-drawer-body"
            >
              Here is content of Drawer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer render correctly 1`] = `
LoadedCheerio {
  "0": <div
    class=""
  >
    <div
      class="dcloud-drawer dcloud-drawer-right"
      tabindex="-1"
    >
      <div
        class="dcloud-drawer-mask"
      />
      <div
        class="dcloud-drawer-content-wrapper"
        style="transform:translateX(100%);-ms-transform:translateX(100%);width:400px"
      >
        <div
          class="dcloud-drawer-content"
        >
          <div
            class="dcloud-drawer-wrapper-body"
          >
            <div
              class="dcloud-drawer-header dcloud-drawer-header-close-only"
            >
              <div
                class="dcloud-drawer-header-title"
              >
                <button
                  aria-label="Close"
                  class="dcloud-drawer-close"
                  type="button"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="dcloud-drawer-body"
            >
              Here is content of Drawer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer render top drawer 1`] = `
LoadedCheerio {
  "0": <div
    class=""
  >
    <div
      class="dcloud-drawer dcloud-drawer-top"
      tabindex="-1"
    >
      <div
        class="dcloud-drawer-mask"
      />
      <div
        class="dcloud-drawer-content-wrapper"
        style="transform:translateY(-100%);-ms-transform:translateY(-100%);height:400px"
      >
        <div
          class="dcloud-drawer-content"
        >
          <div
            class="dcloud-drawer-wrapper-body"
          >
            <div
              class="dcloud-drawer-header dcloud-drawer-header-close-only"
            >
              <div
                class="dcloud-drawer-header-title"
              >
                <button
                  aria-label="Close"
                  class="dcloud-drawer-close"
                  type="button"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="dcloud-drawer-body"
            >
              Here is content of Drawer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": Document {
    "children": Array [],
    "endIndex": null,
    "next": null,
    "parent": null,
    "prev": null,
    "startIndex": null,
    "type": "root",
  },
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer style/drawerStyle/headerStyle/bodyStyle should work 1`] = `
LoadedCheerio {
  "0": <div
    class=""
  >
    <div
      class="dcloud-drawer dcloud-drawer-right"
      style="background-color:#08c"
      tabindex="-1"
    >
      <div
        class="dcloud-drawer-mask"
      />
      <div
        class="dcloud-drawer-content-wrapper"
        style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
      >
        <div
          class="dcloud-drawer-content"
        >
          <div
            class="dcloud-drawer-wrapper-body"
            style="background-color:#08c"
          >
            <div
              class="dcloud-drawer-header dcloud-drawer-header-close-only"
              style="background-color:#08c"
            >
              <div
                class="dcloud-drawer-header-title"
              >
                <button
                  aria-label="Close"
                  class="dcloud-drawer-close"
                  type="button"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="dcloud-drawer-body"
              style="background-color:#08c"
            >
              Here is content of Drawer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Drawer support closeIcon 1`] = `
LoadedCheerio {
  "0": <div
    class=""
  >
    <div
      class="dcloud-drawer dcloud-drawer-right"
      tabindex="-1"
    >
      <div
        class="dcloud-drawer-mask"
      />
      <div
        class="dcloud-drawer-content-wrapper"
        style="transform:translateX(100%);-ms-transform:translateX(100%);width:400px"
      >
        <div
          class="dcloud-drawer-content"
        >
          <div
            class="dcloud-drawer-wrapper-body"
          >
            <div
              class="dcloud-drawer-header dcloud-drawer-header-close-only"
            >
              <div
                class="dcloud-drawer-header-title"
              >
                <button
                  aria-label="Close"
                  class="dcloud-drawer-close"
                  type="button"
                >
                  <span>
                    close
                  </span>
                </button>
              </div>
            </div>
            <div
              class="dcloud-drawer-body"
            >
              Here is content of Drawer
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
